reset button added

--- a/number-string-form.html
+++ b/number-string-form.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
@@ -22,7 +22,7 @@
       <button id="submit" >Submit!</button>
       <div id="text-area">
         <h2>Your Text:</h2>
-        <h4>String Count: <span id="text-count"></span></h4>
+        <h4>String Count: <span id="text-count">0</span></h4>
         <p id="text"></p>
       </div>
       <div id="number-area">
@@ -30,18 +30,19 @@
         <table>
           <tr>
             <th>Count:</th>
-            <td id="number-count"></td>
+            <td id="number-count">0</td>
           </tr>
           <tr>
             <th>Sum:</th>
-            <td id="sum"></td>
+            <td id="sum">0</td>
           </tr>
           <tr>
             <th>Average:</th>
-            <td id="average"></td>
+            <td id="average">0</td>
           </tr>
         </table>
       </div>
+      <button id="reset" >Reset</button>
     </article>
     
     <footer></footer>
